# AdventOfCode

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: common.cpp.38A34658E5E6B52E.idx  common.h.EC6248C53B2DDE6B.idx  day1.cpp.D4BBF31C5409FC63.idx  day1.h.EFA5E10508E875D7.idx  day2.cpp.DDF1AD5FD5D80B23.idx  day2.h.D67CF12C9A1B45F7.idx  main.cpp.D8E9378DE265C9B1.idx  problems.h.311C4297740FAC8C.idx
include/: common.h  day1.h  day2.h  main.h  problems.h
src/2022/: day1.cpp  day2.cpp
src/common/: common.cpp
